tests/js/error/semantics/builtin_number1.js
/*******************************************************************************
    Copyright (c) 2012, S-Core.
    All rights reserved.

    Use is subject to license terms.

    This distribution may include materials developed by third parties.
 ******************************************************************************/

var __result1 = Number(123);
var __expect1 = 123;

var __result2 = Number();
var __expect2 = 0;

var __result3 = Number(undefined);
var __expect3 = NaN;